# baygaud

./: Makefile  README  baygaud.LMC.gen_polaris_sge_scripts.tar  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  setup_baygaud.sh
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
src/lib/: .baygaud.gfit.c.swp  Makefile  Makefile.am  Makefile.in  baygaud.2dmaps.c  baygaud.2dmaps.h  baygaud.etc.c  baygaud.etc.h  baygaud.gfit.c  baygaud.gfit.h  baygaud.global_params.h  baygaud.gsl.c  baygaud.gsl.h  baygaud.main.h  baygaud.memory.c  baygaud.memory.h  baygaud.mpi.c  baygaud.mpi.h  baygaud.mpi_datatype.h  baygaud.multinest.c  baygaud.multinest.h  baygaud.sort.c  baygaud.sort.h  baygaud.trfit.h  t.c
src/lib/.deps/: 2dbat.2dmaps.Po  2dbat.einastofit.Po  2dbat.ellipsefit.Po  2dbat.etc.Po  2dbat.gfit.Po  2dbat.gsl.Po  2dbat.memory.Po  2dbat.mpi.Po  2dbat.multinest.Po  2dbat.priors.Po  2dbat.sort.Po  2dbat.trfit.Po  bagad.2dmaps.Po  bagad.etc.Po  bagad.gfit.Po  bagad.gsl.Po  bagad.memory.Po  bagad.mpi.Po  bagad.multinest.Po  bagad.sort.Po  baygaud.2dmaps.Po  baygaud.etc.Po  baygaud.gfit.Po  baygaud.gsl.Po  baygaud.memory.Po  baygaud.mpi.Po  baygaud.multinest.Po  baygaud.sort.Po
